[package]
name = "midiosch"
version = "0.1.0"
authors = ["Diego Dorado <diegodorado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
iced = { version = "0.1.1", features = ["async-std"] }
iced_native = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.0", features = ["unstable"] }
directories = "2.0"
chrono = "0.4"
