[package]
name = "nannou"
version = "0.1.0"
authors = ["Diego Dorado <diegodorado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15"
nannou_osc = "0.1.0"
midir = "0.7.0"
crossbeam = "0.7"
clap = "3.0.0-beta.2"
