[package]
name = "midiosch"
version = "0.1.0"
authors = ["Diego Dorado <diegodorado@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
nannou_osc = "0.1.0"
midir = "0.7.0"
clap = "3.0.0-beta.2"
crossbeam-channel = "0.5.0"
